Eclipse 2022-12: Sources and features to show; "work in progress" banner